--- a/templates/projeto/base/base.html
+++ b/templates/projeto/base/base.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     {% block cabecalho %}
-    
+        {% if user.is_authenticated%}
+            <a href="{% url 'logout' %}">Encessar Sessão</a>
+        {% endif %}
     {% endblock  %}
 
     {% block main %}
