--- a/gestaoEscolar/templates/gestaoEscolar/autenticacao/logout.html
+++ b/gestaoEscolar/templates/gestaoEscolar/autenticacao/logout.html
@@ -5,5 +5,5 @@
 
 {% block main %}
     <h3>Fim da Sessão</h3>
-    <a href="#"> Voltar</a>
+    <a href="{% url 'login' %}"> Voltar</a>
 {% endblock  %}
