--- a/gestaoEscolar/templates/gestaoEscolar/inicio/gestaoescolar.html
+++ b/gestaoEscolar/templates/gestaoEscolar/inicio/gestaoescolar.html
@@ -5,6 +5,6 @@
 
 {% block main %}
 
-    <h1>Bem Vindo ao GEscolar</h1>    
+    <h1>Bem Vindo ao GEscolar {{ user.username }}</h1>    
 
 {% endblock  %}
