--- a/gestaoEscolar/templates/gestaoEscolar/gestor/diretor_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/gestor/diretor_form.html
@@ -21,8 +21,9 @@
             <div>
                 <label for="id_Sexo">Sexo:</label> 
                 <select name="Sexo" id="id_Sexo">
-                    <option value="M" selected>Masculino</option>
-                    <option value="F">Feminino</option>
+                    {% for tipo in Tipo_Sexo %}
+                        <option value="{{ tipo.0 }}" >{{ tipo.1 }}</option>
+                    {% endfor %}
                 </select>
             </div>
 
@@ -40,7 +41,58 @@
                 <label for="id_Rg">RG:</label> 
                 <input type="text" name="Rg" maxlength="9" id="id_Rg" value='{{ gestor_dados.Rg }}'>                
             </div>
-    
+            
+            <div>
+                <label for="id_Numero1">Telefone 1:</label>
+                <input type="text" name="Numero1" maxlength="20" required id="id_Numero1" value='{{ telefone1_dados.Numero }}'>
+            </div>
+
+            <div>
+                <label for="id_Numero2">Telefone 2:</label>
+                <input type="text" name="Numero2" maxlength="20" required id="id_Numero2" value='{{ telefone2_dados.Numero }}''>
+            </div>
+
+        </fieldset>
+
+        <fieldset>
+            <div>
+                <label for="id_Rua">Rua:</label>
+                <input type="text" name="Rua" maxlength="40" required id="id_Rua" value='{{ endereco_dados.Rua }}'>
+            </div>
+
+            <div>
+                <label for="id_Numero">Número:</label>
+                <input type="number" name="Numero" min="0" required id="id_Numero" value='{{ endereco_dados.Numero }}'>
+            </div>
+
+            <div>
+                <label for="id_Bairro">Bairro:</label>
+                <input type="text" name="Bairro" maxlength="40" required id="id_Bairro" value='{{ endereco_dados.Bairro }}'>
+            </div>
+            
+            <div>
+                <label for="id_Cidade">Cidade:</label>
+                <input type="text" name="Cidade" maxlength="40" required id="id_Cidade" value='{{ endereco_dados.Cidade }}'>
+            </div>
+            
+            <div>
+                <label for="id_Estado">Estado:</label>
+                <input type="text" name="Estado" maxlength="2" required id="id_Estado" value='{{ endereco_dados.Estado }}'>
+            </div>
+
+            <div>
+                <label for="id_Complemento">Complemento:</label>
+                <input type="text" name="Complemento" maxlength="100"  id="id_Complemento" value='{{ endereco_dados.Complemento }}'>
+            </div>
+            
+            <div>
+                <label for="id_Zona">Zona:</label>
+                <select name="Zona" id="id_Zona">
+                    {% for zona in zonas %}
+                        <option value="{{ zona.0 }}" >{{ zona.1 }}</option>
+                    {% endfor %}
+                </select>
+            </div>
         </fieldset>
 
         <fieldset>
@@ -66,6 +118,7 @@
         </fieldset>
 
         <button type="submit">Salvar</button>
+        
     </form>
 
 {% endblock  %}
