Mudanças nos models de Telefone,  PessoaAbstract, Escola e correçoes

--- a/gestaoEscolar/templates/gestaoEscolar/gestor/diretor_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/gestor/diretor_form.html
@@ -44,12 +44,12 @@
             
             <div>
                 <label for="id_Numero1">Telefone 1:</label>
-                <input type="text" name="Numero1" maxlength="20" required id="id_Numero1" value='{{ telefone1_dados.Numero }}'>
+                <input type="text" name="Numero1" maxlength="20" required id="id_Numero1" value='{{ telefone1_dados.Numero1 }}'>
             </div>
 
             <div>
                 <label for="id_Numero2">Telefone 2:</label>
-                <input type="text" name="Numero2" maxlength="20" required id="id_Numero2" value='{{ telefone2_dados.Numero }}''>
+                <input type="text" name="Numero2" maxlength="20" required id="id_Numero2" value='{{ telefone2_dados.Numero2 }}'>
             </div>
 
         </fieldset>
