--- a/gestaoEscolar/templates/gestaoEscolar/escola/escola_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/escola/escola_form.html
@@ -48,18 +48,14 @@
 
             <div>
                 <label for="id_Numero1">Telefone 1:</label>
-                <input type="text" name="Numero1" maxlength="20" required id="id_Numero1" value='{{ telefone1_dados.Numero }}'>
+                <input type="text" name="Numero1" maxlength="20" required id="id_Numero1" value='{{ telefone1_dados.Numero1 }}'>
             </div>
 
             <div>
                 <label for="id_Numero2">Telefone 2:</label>
-                <input type="text" name="Numero2" maxlength="20" required id="id_Numero2" value='{{ telefone2_dados.Numero }}'>
+                <input type="text" name="Numero2" maxlength="20" required id="id_Numero2" value='{{ telefone2_dados.Numero2 }}'>
             </div>
         
-            <div>
-                <label for="id_Numero3">Telefone 3:</label>
-                <input type="text" name="Numero3" maxlength="20" required id="id_Numero3" value='{{ telefone3_dados.Numero }}'>
-            </div>
         </fieldset>
 
         <fieldset>
