--- a/gestaoEscolar/templates/gestaoEscolar/escola/escola_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/escola/escola_form.html
@@ -1,16 +1,35 @@
 {% extends 'projeto/base/base.html' %}
 
-{% block title %}Cadastrar nova Escola | GEscolar{% endblock  %}
+{% block title %}
+    {% if Tipo_Transacao == 'INS' %}
+        Cadastrar nova Escola | GEscolar 
+    {% else %}
+        Alterar Escola | GEscolar 
+    {% endif %}
+{% endblock  %}
 
 
 {% block main %}
+
+    {% if Tipo_Transacao == 'INS' %}
+        <h2>Cadastrar Escola</h2> 
+    {% else %}
+        <h2>Atualizar dados da Escola</h2>
+    {% endif %}
 
     {% for erro in erros %}
         {{ erro }}
     {% endfor %}
 
 
-    <form action="{% url 'escola_novo' %}" method="POST">
+    <form action="
+            {% if Tipo_Transacao == 'INS' %}
+                {% url 'escola_novo' %}
+            {% else %}
+                {% url 'escola_alterar' idEscola %}
+            {% endif %}
+        " method="POST">
+
         {% csrf_token %}
         <fieldset>
             <div>
@@ -22,12 +41,18 @@
                 <label for="id_Email">Email:</label>
                 <input type="email" name="Email" maxlength="254" required id="id_Email" value='{{ escola_dados.Email }}'>            
             </div>
+            
 
             <div>
                 <label for="id_Nivel_Escolaridade">Nível Escolaridade:</label>
                 <select name="Nivel_Escolaridade" id="id_Nivel_Escolaridade">    
                     {% for nivel in Niveis %}
-                        <option value="{{ nivel.0 }}" >{{ nivel.1 }}</option>
+                        {% if escola_dados.Nivel_Escolaridade == nivel.0 %}
+                            <option value="{{ nivel.0 }}" selected>{{ nivel.1 }}</option>
+                        {% else %}
+                            <option value="{{ nivel.0 }}" >{{ nivel.1 }}</option>
+                        {% endif %}
+    
                     {% endfor %}                
                 </select>
             </div>
@@ -36,7 +61,11 @@
                 <label for="id_Tipo_Escola">Tipo da Escola:</label>
                 <select name="Tipo_Escola" id="id_Tipo_Escola"> 
                     {% for tipo in Tipos %}
-                        <option value="{{ tipo.0 }}" >{{ tipo.1 }}</option>
+                        {% if escola_dados.Tipo_Escola == tipo.0 %}
+                            <option value="{{ tipo.0 }}" selected>{{ tipo.1 }}</option>
+                        {% else %}
+                            <option value="{{ tipo.0 }}" >{{ tipo.1 }}</option>
+                        {% endif %}
                     {% endfor %}
                 </select>           
             </div>
@@ -48,12 +77,12 @@
 
             <div>
                 <label for="id_Numero1">Telefone 1:</label>
-                <input type="text" name="Numero1" maxlength="20" required id="id_Numero1" value='{{ telefone1_dados.Numero1 }}'>
+                <input type="text" name="Numero1" maxlength="20" required id="id_Numero1" value='{{ telefone_dados.Numero1 }}'>
             </div>
 
             <div>
                 <label for="id_Numero2">Telefone 2:</label>
-                <input type="text" name="Numero2" maxlength="20" required id="id_Numero2" value='{{ telefone2_dados.Numero2 }}'>
+                <input type="text" name="Numero2" maxlength="20" required id="id_Numero2" value='{{ telefone_dados.Numero2 }}'>
             </div>
         
         </fieldset>
@@ -93,7 +122,11 @@
                 <label for="id_Zona">Zona:</label>
                 <select name="Zona" id="id_Zona">
                     {% for zona in zonas %}
-                        <option value="{{ zona.0 }}" >{{ zona.1 }}</option>
+                        {% if endereco_dados.Zona == zona.0 %}
+                            <option value="{{ zona.0 }}" selected>{{ zona.1 }}</option>
+                        {% else %}
+                            <option value="{{ zona.0 }}" >{{ zona.1 }}</option>
+                        {% endif %}
                     {% endfor %}
                 </select>
             </div>
