Testando e corrigindo o cadastro de secretarios e criando o alterar secretario

--- a/gestaoEscolar/templates/gestaoEscolar/secretario/secretario_listagem.html
+++ b/gestaoEscolar/templates/gestaoEscolar/secretario/secretario_listagem.html
@@ -18,13 +18,13 @@
                 <th>RG</th>
                 <th>Email</th>
             </tr>
-            <a href="#">Novo</a>
+            <a href="{% url 'secretario_novo' %}">Novo</a>
         </thead>
         <tbody>
             {% for secretario in secretarios %}
                 {% if secretarios is not None %}
                     <tr>
-                        <th>X</th>
+                        <th><a href="{% url 'secretario_alterar' secretario.id %}">X</a></th>
                         <th>X</Th>
                         <th>{{ secretario.Nome }}</th>
                         <th>{{ secretario.Sexo }}</th>
