--- a/gestaoEscolar/templates/gestaoEscolar/secretario/secretario_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/secretario/secretario_form.html
@@ -2,9 +2,9 @@
 
 {% block title %}
     {% if Tipo_Transacao == 'INS' %}
-        Cadastrar nova Escola | GEscolar 
+        Cadastrar novo Secretário | GEscolar 
     {% else %}
-        Alterar Escola | GEscolar 
+        Alterar Secretário | GEscolar 
     {% endif %}
 {% endblock  %}
 
@@ -12,68 +12,57 @@
 {% block main %}
 
     {% if Tipo_Transacao == 'INS' %}
-        <h2>Cadastrar Escola</h2> 
+        <h2>Cadastrar Secretário</h2> 
     {% else %}
-        <h2>Atualizar dados da Escola</h2>
+        <h2>Atualizar dados do Secretário</h2>
     {% endif %}
 
     {% for erro in erros %}
         {{ erro }}
     {% endfor %}
 
-
     <form action="
             {% if Tipo_Transacao == 'INS' %}
-                {% url 'escola_novo' %}
+                {% url 'secretario_novo' %}
             {% else %}
-                {% url 'escola_alterar' idEscola %}
+                {% url 'secretario_alterar' idSecretario %}
             {% endif %}
         " method="POST">
-
         {% csrf_token %}
         <fieldset>
             <div>
-                <label for="id_Nome">Nome:</label>
-                <input type="text" name="Nome" maxlength="50" required id="id_Nome" value='{{ escola_dados.Nome }}'>
+                <label for="id_Nome">Nome:</label> 
+                <input type="text" name="Nome" maxlength="50" required id="id_Nome" value='{{ secretario_dados.Nome }}'>
             </div>
 
             <div>
-                <label for="id_Email">Email:</label>
-                <input type="email" name="Email" maxlength="254" required id="id_Email" value='{{ escola_dados.Email }}'>            
-            </div>
-            
-
-            <div>
-                <label for="id_Nivel_Escolaridade">Nível Escolaridade:</label>
-                <select name="Nivel_Escolaridade" id="id_Nivel_Escolaridade">    
-                    {% for nivel in Niveis %}
-                        {% if escola_dados.Nivel_Escolaridade == nivel.0 %}
-                            <option value="{{ nivel.0 }}" selected>{{ nivel.1 }}</option>
+                <label for="id_Sexo">Sexo:</label> 
+                <select name="Sexo" id="id_Sexo">
+                    {% for sexo in Tipo_Sexo %}
+                        {% if secretario_dados.Sexo == sexo.0 %}
+                            <option value="{{ sexo.0 }}" selected>{{ sexo.1 }}</option>
                         {% else %}
-                            <option value="{{ nivel.0 }}" >{{ nivel.1 }}</option>
+                            <option value="{{ sexo.0 }}" >{{ sexo.1 }}</option>
                         {% endif %}
-                    {% endfor %}                
+                    {% endfor %}       
                 </select>
             </div>
+
+            <div>
+                <label for="id_Data_Nascimento">Data de Nascimento:</label> 
+                <input type="date" name="Data_Nascimento" required id="id_Data_Nascimento" value='{{ secretario_dados.Data_Nascimento|date:"Y-m-d" }}'>
+            </div>
+
+            <div>
+                <label for="id_Cpf">CPF:</label> 
+                <input type="text" name="Cpf" required maxlength="11" id="id_Cpf" value='{{ secretario_dados.Cpf }}'>               
+            </div>
+
+            <div>
+                <label for="id_Rg">RG:</label> 
+                <input type="text" name="Rg" maxlength="9" required id="id_Rg" value='{{ secretario_dados.Rg }}'>                
+            </div>
             
-            <div>
-                <label for="id_Tipo_Escola">Tipo da Escola:</label>
-                <select name="Tipo_Escola" id="id_Tipo_Escola"> 
-                    {% for tipo in Tipos %}
-                        {% if escola_dados.Tipo_Escola == tipo.0 %}
-                            <option value="{{ tipo.0 }}" selected>{{ tipo.1 }}</option>
-                        {% else %}
-                            <option value="{{ tipo.0 }}" >{{ tipo.1 }}</option>
-                        {% endif %}
-                    {% endfor %}
-                </select>           
-            </div>
-
-            <div>
-                <label for="id_Nota_de_Corte">Nota de corte de aprovação:</label>
-                <input type="number" name="Nota_de_Corte" step="1" required id="id_Nota_de_Corte" maxlength="2" value='{{ escola_dados.Nota_de_Corte }}'>            
-            </div>
-
             <div>
                 <label for="id_Numero1">Telefone 1:</label>
                 <input type="text" name="Numero1" maxlength="20" required id="id_Numero1" value='{{ telefone_dados.Numero1 }}'>
@@ -83,7 +72,12 @@
                 <label for="id_Numero2">Telefone 2:</label>
                 <input type="text" name="Numero2" maxlength="20" required id="id_Numero2" value='{{ telefone_dados.Numero2 }}'>
             </div>
-        
+
+            <div>
+                <label for="id_email">Email:</label> 
+                <input type="email" name="email" maxlength="254" required id="id_email" value='{{ usuario_dados.email }}'>     
+            </div>
+
         </fieldset>
 
         <fieldset>
@@ -131,9 +125,8 @@
             </div>
         </fieldset>
 
-
         <button type="submit">Salvar</button>
-        <a href="{% url 'gestao_escolar_inicio' %}"> Voltar</a>
+        
     </form>
 
 {% endblock  %}
