Criacao do listar um secretario e deletar secretario, e a adicao da funcionalidade de ativar e desativar a conta de um secretario

--- a/gestaoEscolar/templates/gestaoEscolar/secretario/secretario_listagem.html
+++ b/gestaoEscolar/templates/gestaoEscolar/secretario/secretario_listagem.html
@@ -25,8 +25,8 @@
                 {% if secretarios is not None %}
                     <tr>
                         <th><a href="{% url 'secretario_alterar' secretario.id %}">X</a></th>
-                        <th>X</Th>
-                        <th>{{ secretario.Nome }}</th>
+                        <th><a href="{% url 'secretario_deletar' secretario.id %}">X</a></th>
+                        <th><a href="{% url 'secretario_consultar' secretario.id %}">{{ secretario.Nome }}</a></th>
                         <th>{{ secretario.Sexo }}</th>
                         <th>
                             {% if secretario.Cpf is not None %}
