Ordenacao da listagem de secretarios por nome, e criacao do crud de Professores

--- a/gestaoEscolar/templates/gestaoEscolar/secretario/secretario_listagem.html
+++ b/gestaoEscolar/templates/gestaoEscolar/secretario/secretario_listagem.html
@@ -17,6 +17,7 @@
                 <th>CPF</th>
                 <th>RG</th>
                 <th>Email</th>
+                <th>Status</th>
             </tr>
             <a href="{% url 'secretario_novo' %}">Novo</a>
         </thead>
@@ -39,11 +40,18 @@
                             {% endif %} 
                         </th>
                         <th>{{ secretario.Usuario.email }}</th>
+                        {% if secretario.Usuario.is_active %}
+                            <th>Ativo</th>
+                        {% else %}
+                            <th>Inativo</th>
+                        {% endif %}
+                        
                     </tr>
                 {% else %}
                     <tr>
                         <th>X</th>
                         <th>X</th>
+                        <th></th>
                         <th></th>
                         <th></th>
                         <th></th>
