--- a/templates/projeto/base/base.html
+++ b/templates/projeto/base/base.html
@@ -14,6 +14,7 @@
         {% if user.is_authenticated%}
             <a href="{% url 'escola_novo' %}">Escola Novo</a>
             <a href="{% url 'secretario_listagem' %}">Secretário</a>
+            <a href="{% url 'professor_listagem' %}">Professor</a>
             <a href="{% url 'logout' %}">Encessar Sessão</a>
             {{ user.username }}
         {% endif %}
