--- a/gestaoEscolar/templates/gestaoEscolar/secretario/secretario_listagem.html
+++ b/gestaoEscolar/templates/gestaoEscolar/secretario/secretario_listagem.html
@@ -29,16 +29,8 @@
                         <th><a href="{% url 'secretario_deletar' secretario.id %}">X</a></th>
                         <th><a href="{% url 'secretario_consultar' secretario.id %}">{{ secretario.Nome }}</a></th>
                         <th>{{ secretario.Sexo }}</th>
-                        <th>
-                            {% if secretario.Cpf is not None %}
-                                {{ secretario.Cpf }}                            
-                            {% endif %} 
-                        </th>
-                        <th>
-                            {% if secretario.Rg is not None %}
-                                {{ secretario.Rg }}                            
-                            {% endif %} 
-                        </th>
+                        <th>{{ secretario.Cpf }}</th>
+                        <th>{{ secretario.Rg }}</th>
                         <th>{{ secretario.Usuario.email }}</th>
                         {% if secretario.Usuario.is_active %}
                             <th>Ativo</th>
