--- a/templates/projeto/base/base.html
+++ b/templates/projeto/base/base.html
@@ -15,6 +15,7 @@
             <a href="{% url 'escola_novo' %}">Escola Novo</a>
             <a href="{% url 'secretario_listagem' %}">Secretário</a>
             <a href="{% url 'professor_listagem' %}">Professor</a>
+            <a href="{% url 'aluno_listagem' %}">Aluno</a>
             <a href="{% url 'logout' %}">Encessar Sessão</a>
             {{ user.username }}
         {% endif %}
